--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "brownian-motion",
   "version": "1.0.0",
   "description": "event-based brownian motion simulation with canvas",
-  "main": "index.js",
+  "repository" : {
+    "type" : "git",
+    "url" : "https://github.com/huiwang/brownian-motion.git"
+  },
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
