--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "brownian-motion",
   "version": "1.0.0",
   "description": "event-based brownian motion simulation with canvas",
-  "repository" : {
-    "type" : "git",
-    "url" : "https://github.com/huiwang/brownian-motion.git"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/huiwang/brownian-motion.git"
   },
   "main": "main.js",
   "scripts": {
@@ -16,5 +16,8 @@
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
     "webpack": "^1.12.2"
+  },
+  "dependencies": {
+    "es-collections": "0.0.1"
   }
 }
