--- a/package.json
+++ b/package.json
@@ -8,16 +8,20 @@
   },
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --watch --compilers js:mocha-babel app/test/particle_test.js"
   },
   "author": "Hui WANG",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
+    "babel-runtime": "^5.8.25",
+    "mocha": "^2.3.3",
+    "mocha-babel": "^3.0.0",
     "webpack": "^1.12.2"
   },
   "dependencies": {
-    "es-collections": "0.0.1"
+    "es-collections": "0.0.1",
+    "vigur": "^0.1.1"
   }
 }
